# crid

./: Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
benches/: converter.rs  crid-bench.rs  crid.rs  js.ts
crid/: Cargo.toml
crid/src/: base58.rs  base_x.rs  lib.rs  speck.rs  test_base58.rs  test_crid.rs  test_speck.rs
native/: Cargo.toml
native/benches/: crid.rs  js.ts
native/src/: base58.rs  lib.rs
src/: base-x.ts  base58.rs  base58.test.ts  base58.ts  base_x.rs  crid.test.ts  impls.ts  index.ts  jsverify.d.ts  lib.rs  speck.rs  speck.test.ts  speck.ts  test_base58.rs  test_base_x.rs  test_crid.rs  test_speck.rs
test/: base58.ts  index.ts  rand.ts  rand48.ts  speck.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
