[package]
name = "crid"
version = "0.1.0"
authors = ["Arpad Borsos <arpad.borsos@googlemail.com>"]
# build = "neon_build.rs"

[lib]
name = "crid"
# crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.23"

[dependencies]
neon = "0.1.23"

[dev-dependencies]
quickcheck = "0.6"
criterion = "0.2"

[[bench]]
name = "crid"
harness = false
